--- a/test_ui.ui
+++ b/test_ui.ui
@@ -477,7 +477,7 @@
             <property name="maximumSize">
              <size>
               <width>132</width>
-              <height>114</height>
+              <height>99999</height>
              </size>
             </property>
             <property name="frameShape">
@@ -539,6 +539,50 @@
                </property>
                <property name="checked">
                 <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="checkbox_show_average">
+               <property name="text">
+                <string>Show Average</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLCDNumber" name="lcd_channel_average">
+               <property name="minimumSize">
+                <size>
+                 <width>94</width>
+                 <height>30</height>
+                </size>
+               </property>
+               <property name="font">
+                <font>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="frameShape">
+                <enum>QFrame::Panel</enum>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Plain</enum>
+               </property>
+               <property name="lineWidth">
+                <number>1</number>
+               </property>
+               <property name="smallDecimalPoint">
+                <bool>false</bool>
+               </property>
+               <property name="digitCount">
+                <number>7</number>
+               </property>
+               <property name="segmentStyle">
+                <enum>QLCDNumber::Flat</enum>
+               </property>
+               <property name="value" stdset="0">
+                <double>1234.000000000000000</double>
                </property>
               </widget>
              </item>
